# procedural-music-generation

./: .gitignore  Cargo.toml  LICENSE  MusicTheoryNotes.md  README.md  TODO.md
src/: lib.rs  melody_music_maker.rs  test.rs
src/musicgeneration/: chord_progression_generator.rs  mod.rs  pattern_generator.rs  random_scale.rs  rhythm_pattern_generator.rs  sheet_from_binary.rs  sheet_generator.rs
src/musicsource/: chord_music_maker.rs  melody_music_maker.rs  mod.rs  sheet_music_maker.rs
src/musictheory/: cent.rs  chord.rs  chord_progression.rs  hertz.rs  interval.rs  key.rs  measure.rs  mod.rs  mode.rs  note.rs  note_value.rs  pattern.rs  piano_key.rs  pitch.rs  scale.rs  semitone.rs  sheet.rs  sheet_note.rs  tempo.rs  time_signature.rs
src/signal/: adsr_envelop.rs  mod.rs
