[package]
name = "pmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {features = [ "small_rng" ], version = "0.8.5"}
rodio = "0.17.3"
roman = "0.1.6"
structopt = "0.3.26"
wav_io = "0.1.14"
